<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A7E5ED"
    android:orientation="vertical"
    tools:context=".Main1Activity">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t1" />

        <Spinner
            android:id="@+id/c1"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t2" />

        <Spinner
            android:id="@+id/c2"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t33" />

        <Spinner
            android:id="@+id/c3"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t3" />

        <Spinner
            android:id="@+id/c4"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t4" />

        <Spinner
            android:id="@+id/c5"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:text="@string/t6" />

    <Spinner
        android:id="@+id/c6"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et6"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/et"
        android:background="#E0E4E4"
        android:hint="@string/et"
        android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:onClick="calc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tw1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:background="#34DDF3"
                android:text="@string/tr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tw2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:background="#55BDEC"
                    android:text="@string/tr1" />

                <TextView
                    android:id="@+id/tw3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:background="#55BDEC"
                    android:text="@string/tr2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>