<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EDB5B5"
    tools:context=".Main1Activity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t1" />

        <Spinner
            android:id="@+id/c1"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t2" />

        <Spinner
            android:id="@+id/c2"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t33" />

        <Spinner
            android:id="@+id/c3"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:text="@string/t3"/>

        <Spinner
            android:id="@+id/c4"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/et"
            android:background="#E0E4E4"
            android:hint="@string/et"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:onClick="calc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/tw1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#FCF87E88"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/tr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tw2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:background="#85EF606C"
                    android:text="@string/tr1" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>